--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  mobile_scanner: ^7.1.2
+  mobile_scanner: ^5.1.0
+  qr_flutter: ^4.1.0
+  image_gallery_saver: ^2.0.3
+  share_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
