--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,13 @@ dependencies:
   qr_flutter: ^4.1.0
   image_gallery_saver: ^2.0.3
   share_plus: ^9.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+    android: true
+    ios: false
+    image_path: "assets/images/qr-code.png"
+    adaptive_icon_background: "#ffffff"
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/qr scanner frame.png
+     - assets/images/qr-code.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
